--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    window.location = "https://fianpanic.blogspot.co.id/";
+<script type="text/javascript">
+	window.location = "https://fianpanic.blogspot.co.id/";
+</script>
+  <head>    
     <!-- Meta, title, CSS, favicons, etc. -->
     <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
