--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
     <!-- Site Title and Description -->
-    <title>3Angle - Creative & Modern MultiPurpose Theme</title>
-    <meta name="description" content="Here goes the description">
+    <title>FIAN PANIC | Kumpulan Catatan Pribadi Dan Catatan Lainnya Dari Berbagai Sumber.</title>
+    <meta name="description" content="Kumpulan Catatan Pribadi Dan Catatan Lainnya Dari Berbagai Sumber.">
     <meta name="author" content="author name">
 
     <!-- Mobile Specific Meta -->
@@ -80,7 +80,7 @@
         <!-- Header Logo -->
         <div class="logo">
             <a href="#">
-                <img src="img/main-logo.png" alt=""/>
+                <img src="" alt=""/>
             </a>
         </div>
         <!-- /Header Logo -->
@@ -151,7 +151,7 @@
             <div class="row-fluid">
                 <div class="span4">
                     <div class="skills-item">
-                        <h3><img src="img/icons/s_rocket.png" alt="rocket"/></h3>
+                        <h3><img src="" alt="rocket"/></h3>
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 370 370" version="1.1" class="skills">
                             <g>
                                 <use x = "0" y = "0" xlink:href = "#tr22" fill = "#ffd043"/>
@@ -164,7 +164,7 @@
                 </div>
                 <div class="span4">
                     <div class="skills-item">
-                        <h3><img src="img/icons/s_globe.png" alt="globe"/></h3>
+                        <h3><img src="" alt="globe"/></h3>
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 370 370" version="1.1" class="skills">
                             <g>
                                 <use x = "0" y = "0" xlink:href = "#tr22" fill = "#ff7c39"/>
@@ -177,7 +177,7 @@
                 </div>
                 <div class="span4">
                     <div class="skills-item">
-                        <h3><img src="img/icons/s_umbrella.png" alt="umbrella"/></h3>
+                        <h3><img src="" alt="umbrella"/></h3>
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 370 370" version="1.1" class="skills">
                             <g>
                                 <use x = "0" y = "0" xlink:href = "#tr22" fill = "#ff4a39"/>
